<resources>
    <string name="app_name">Financial Diary</string>
    <string name="button_new_account">Create New Account</string>
    <string name="button_use_existing_account">Use Existing Account</string>
    <string name="title_activity_create_new_account">Create New Account</string>
    <string name="email_textView">Email:</string>
    <string name="password_textView">Password:</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="new_record">New Record</string>
    <string name="new_category">New Category</string>
    <string name="overview">Overview of Records</string>
    <string name="reports">Reports</string>
    <string name="synchronize">Synchronize</string>
    <string name="logout">Log Out</string>
    <string name="create_new_category">Create New Category</string>
    <string name="name_textView">Name:</string>
    <string name="type_textView">Type:</string>
    <string name="type_from_textView">From Type:</string>
    <string name="type_to_textView">To Type:</string>
    <string name="category_from_textView">From Category:</string>
    <string name="category_to_textView">To Category:</string>
    <string name="amount_textView">Amount:</string>
    <string name="date_textView">Date:</string>
    <string name="note_textView">Note:</string>
    <string name="create_new_record">Create New Record</string>
    <string name="year_textView">Year:</string>
    <string name="month_textView">Month:</string>
    <string name="show">Show</string>
    <string name="this_day">This Day</string>
    <string name="this_month">This Month</string>
    <string name="this_year">This Year</string>
    <string name="left_arrow">&lt;</string>
    <string name="right_arrow">&gt;</string>
    <string name="save_record">Save Record</string>
    <string name="ever">Ever</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered email address to sent you password reset instructions.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="asset">Asset</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="overview_categories">Overview of Categories</string>
    <string name="save_category">Save Category</string>


    <string-array name="type_dropdown_arrays">
        <item>Asset</item>
        <item>Liability</item>
        <item>Expense</item>
        <item>Income</item>
        <item>Other</item>
    </string-array>

    <string-array name="months_arrays">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
