<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_selection_reports"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.faltynka.financialdiary.SelectionReportsActivity">

    <TextView
        android:text="@string/year_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yearReportsTextView" />

    <Spinner
        android:id="@+id/year_reports_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:text="@string/month_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/monthReportsTextView"
        android:layout_marginTop="5dp"/>

    <Spinner
        android:id="@+id/month_reports_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:entries="@array/months_arrays"
        />

    <Button
        android:text="@string/show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:id="@+id/show_reports_button" />

    <!-- Child linear layout with horizontal orientation -->
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dip">

        <Button
            android:text="@string/this_month"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/this_month_reports_button"
            android:layout_weight="1"/>

        <Button
            android:text="@string/this_year"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/this_year_reports_button"
            android:layout_weight="1"/>

        <Button
            android:text="@string/ever"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/ever_reports_button"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>
