<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_record"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.faltynka.financialdiary.EditRecordActivity">

    <TextView
        android:text="@string/type_from_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/typeFromEdiTextView" />

    <Spinner
        android:id="@+id/type_from_edit_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:text="@string/category_from_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/categoryFromEditTextView"
        android:layout_marginTop="5dp"/>

    <Spinner
        android:id="@+id/category_from_edit_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:text="@string/type_to_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/typeToEditTextView" />

    <Spinner
        android:id="@+id/type_to_edit_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:text="@string/category_to_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/categoryToEditTextView" />

    <Spinner
        android:id="@+id/category_to_edit_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:text="@string/amount_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/amountEditTextView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/amountEditEditText"
        android:layout_marginTop="5dp" />

    <TextView
        android:text="@string/date_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/dateEditTextView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dateEditEditText"
        android:layout_marginTop="5dp" />

    <TextView
        android:text="@string/note_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/noteEditTextView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/noteEditEditText"
        android:layout_marginTop="5dp" />

    <Button
        android:text="@string/edit_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/edit_record_button" />

</LinearLayout>
