<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_use_existing_account"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.faltynka.financialdiary.UseExistingAccountActivity">

    <TextView
        android:text="@string/email_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailExistingTextView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/emailExistingEditText"
        android:layout_marginTop="45dp" />

    <TextView
        android:text="@string/password_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/passwordExistingTextView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/passwordExistingEditText"
        android:layout_marginTop="45dp" />

    <Button
        android:text="@string/log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/loginButton" />

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@android:color/transparent"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="?attr/colorAccent"
        />

</LinearLayout>
