<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:orientation="vertical">

        <TextView
            android:text="@string/this_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/this_month_widget"
            android:textColor="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/asset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/asset_widget"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/asset_amount_widget"
                android:gravity="right"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/expense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/expense_widget"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/expense_amount_widget"
                android:gravity="right"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/income_widget"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/income_amount_widget"
                android:gravity="right"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:text="@string/new_record"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/btn_new_record_widget"
        android:textSize="12sp"/>

</LinearLayout>