<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_category"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.faltynka.financialdiary.NewCategory">

    <TextView
        android:text="@string/type_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/typeNewTextView" />

    <Spinner
        android:id="@+id/new_category_type_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/type_dropdown_arrays"
        android:layout_marginTop="20dp"
         />

    <TextView
        android:text="@string/name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/nameNewCategoryTextView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/nameNewCategory"
        android:layout_marginTop="45dp" />

    <Button
        android:text="@string/create_new_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/create_new_category_button" />

</LinearLayout>
