<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_category"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.faltynka.financialdiary.EditCategoryActivity">

    <TextView
        android:text="@string/type_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/typeEditCategoryTextView" />

    <Spinner
        android:id="@+id/edit_category_type_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/type_dropdown_arrays"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:text="@string/name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/nameEditCategoryTextView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/nameEditCategory"
        android:layout_marginTop="45dp" />

    <Button
        android:text="@string/save_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/save_edited_category_button" />

</LinearLayout>
